--- a/Resources/css/queries.css
+++ b/Resources/css/queries.css
@@ -19,6 +19,14 @@
 }
 /* LG */
 @media all and (min-width: 992px) { 
+    .tools-picture{
+        filter: brightness(95%);
+    }
+    .no-pd-xs
+    {
+        padding-left: 30px !important;
+        padding-right: 30px !important;
+    }
     .heading-main-box h1
     {
         font-size: 65px !important;
